2004-08-06  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/amfs_program.c (amfs_program_match): bug fix.  Complain if
	both opt_unmount and opt_umount are missing, not when just one of
	them is missing.

2004-08-03  Erez Zadok  <ezk@cs.sunysb.edu>

	* amq/pawd.c (find_mt): recognize "linkx" type mounts.  Patch from
	Hauke Fath <hauke@Espresso.Rhein-Neckar.DE>.  Support "nfsx" while
	we're at it.

	* doc/am-utils.texi: mention bugzilla.  Fix broken URL HREF's.

2004-08-02  Erez Zadok  <ezk@cs.sunysb.edu>

	* amq/pawd.c (find_mt): recognize "host" type mounts.  Patch from
	Dan Nelson <dnelson@allantgroup.com>.

2004-07-30  Erez Zadok  <ezk@cs.sunysb.edu>

	* doc/am-utils.texi, NEWS: minor typos fixed.

2004-07-30  Erez Zadok  <ezk@play.cs.columbia.edu>

	* include/am_xdr_func.h: cannot have field-less structure; put a
	dummy field in.

	* conf/autofs/autofs_solaris_v2_v3.c (xdr_autofs_rddirargs): cast
	2nd arg of xdr_u_int to a u_int*, not int*.
	(autofs_mount_2_req): don't use C++ // comments.

2004-07-30  Erez Zadok  <ezk@cs.sunysb.edu>

	* m4/macros/{try_compile_anyfs,check_field}.m4: include
	<fs/msdosfs/msdosfsmount.h> if it exists.  Part of a set of
	FreeBSD 5 patches from Martin Blapp <mb@imp.ch>.

	* include/am_defs.h: include <fs/msdosfs/msdosfsmount.h> if it
	exists.

	* amd/ops_pcfs.c (mount_pcfs): set pcfs_args_t.dirmask field to
	0777 by default.

	* configure.in: check for pcfs_args_t.dirmask field.  Check for
	existence of <fs/msdosfs/msdosfsmount.h>, new on FreeBSD 5.

2004-07-29  Erez Zadok  <ezk@cs.sunysb.edu>

	* minor new port: i386-pc-linux-fc2 (Fedora Core 2).

	* amd/info_ldap.c (amu_ldap_rebind): don't use ldap_enable_cache()
	unless the function exists in libldap and the extern is in
	<ldap.h>.  Recently, openldap removed the extern from ldap.h, but
	left the function in libldap, for binary compatibility; however
	ldap_enable_cache and related functions have been deprecated (and
	no longer listed in the header files), and therefore should be